Add rest api for search schema. Add poc for search.
